syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "/.;proto";

service Goods{
    //商品接口
    rpc GoodsList(GoodsFilterRequest) returns(GoodsListResponse);  //根据条件获取商品列表
    //现在用户提交订单有多个商品，你得批量查询商品的信息吧
    rpc BatchGetGoods(BatchGoodsIdInfo) returns(GoodsListResponse); //批量获取商品信息
    rpc CreateGoods(CreateGoodsInfo) returns (GoodsInfoResponse);   //添加商品
    rpc DeleteGoods(DeleteGoodsInfo) returns (google.protobuf.Empty); //删除商品
    rpc UpdateGoods(CreateGoodsInfo) returns (google.protobuf.Empty); //更新商品
    rpc GetGoodsDetail(GoodInfoRequest) returns(GoodsInfoResponse);   //根据id获取商品内容

    //商品分类
    rpc GetAllCategorysList(google.protobuf.Empty) returns(CategoryListResponse); //获取所有的分类
    //获取子分类
    rpc GetSubCategory(CategoryListRequest) returns(SubCategoryListResponse); //商品子分类列表
    rpc CreateCategory(CategoryInfoRequest) returns(CategoryInfoResponse); //新建分类信息
    rpc DeleteCategory(DeleteCategoryRequest) returns(google.protobuf.Empty); //删除分类
    rpc UpdateCategory(CategoryInfoRequest) returns(google.protobuf.Empty); //修改分类信息

    //品牌
    rpc BrandList(BrandFilterRequest) returns(BrandListResponse); //批量获取品牌信息
    rpc CreateBrand(BrandRequest) returns(BrandInfoResponse); //新建品牌信息
    rpc DeleteBrand(BrandRequest) returns(google.protobuf.Empty); //删除品牌
    rpc UpdateBrand(BrandRequest) returns(google.protobuf.Empty); //修改品牌信息

    //轮播图
    rpc BannerList(google.protobuf.Empty) returns(BannerListResponse); //获取轮播列表信息
    rpc CreateBanner(BannerRequest) returns(BannerResponse); //添加banner图
    rpc DeleteBanner(BannerRequest) returns(google.protobuf.Empty); //删除轮播图
    rpc UpdateBanner(BannerRequest) returns(google.protobuf.Empty); //修改轮播图

    //品牌分类
    rpc CategoryBrandList(CategoryBrandFilterRequest) returns(CategoryBrandListResponse); //获取品牌分类列表
    //通过category获取brands
    rpc GetCategoryBrandList(CategoryInfoRequest) returns(BrandListResponse);     //根据品牌分类返回品牌列表
    rpc CreateCategoryBrand(CategoryBrandRequest) returns(CategoryBrandResponse); //新增分类关联品牌
    rpc DeleteCategoryBrand(CategoryBrandRequest) returns(google.protobuf.Empty); //删除分类关联品牌
    rpc UpdateCategoryBrand(CategoryBrandRequest) returns(google.protobuf.Empty); //修改分类关联品牌
}

//商品分类列表请求，根据id和level
message CategoryListRequest {
    int32 id = 1;
    int32 level = 2;
}

//品牌分类请求
message CategoryInfoRequest {
    int32 id = 1;
    string name = 2;
    int32 parentCategory = 3;
    int32 level = 4;
    bool isTab = 5;
}

//删除分类请求
message DeleteCategoryRequest {
    int32 id = 1;
}


message QueryCategoryRequest {
    int32 id = 1;
    string name = 2;
}

//分类结果返回
message CategoryInfoResponse {
    int32 id = 1;
    string name = 2;
    int32 parentCategory = 3;
    int32 level = 4;
    bool isTab = 5;
}

//分类列表返回
message CategoryListResponse {
    int32 total = 1;
    repeated CategoryInfoResponse data = 2;
    string jsonData = 3;
}

//分类返回
message SubCategoryListResponse {
    int32 total = 1;
    CategoryInfoResponse info = 2; //本身的分类
    repeated CategoryInfoResponse subCategorys = 3;  //子分类
}


//商品分类
message CategoryBrandFilterRequest  {
    int32 pages = 1;
    int32 pagePerNums = 2;
}

//筛选请求
message FilterRequest  {
    int32 pages = 1;
    int32 pagePerNums = 2;
}

//商品类别关联品牌
message CategoryBrandRequest{
    int32 id = 1;
    int32 categoryId = 2;
    int32 brandId = 3;
}

//商品类别关联品牌返回
message CategoryBrandResponse{
    int32 id = 1;
    BrandInfoResponse brand = 2;
    CategoryInfoResponse category = 3;
}

//轮播图信息请求
message BannerRequest {
    int32 id = 1;
    int32 index = 2;
    string image = 3;
    string url = 4;
}

//轮播图信息返回
message BannerResponse {
    int32 id = 1;
    int32 index = 2;
    string image = 3;
    string url = 4;
}

//品牌筛选请求
message BrandFilterRequest {
    int32 pages = 1;
    int32 pagePerNums = 2;
}

//品牌请求
message BrandRequest {
    int32 id = 1;
    string name = 2;
    string logo = 3;
}

//品牌信息返回
message BrandInfoResponse {
    int32 id = 1;
    string name = 2;
    string logo = 3;
}

//品牌列表返回
message BrandListResponse {
    int32 total = 1;
    repeated BrandInfoResponse data = 2;
}

//轮播图列表请求
message BannerListResponse {
    int32 total = 1;
    repeated BannerResponse data = 2;
}

//商品类别关联品牌列表返回
message CategoryBrandListResponse {
    int32 total = 1;
    repeated CategoryBrandResponse data = 2;
}


//批量获取商品信息请求
message BatchGoodsIdInfo {
    repeated int32 id = 1;
}

//删除商品请求
message DeleteGoodsInfo {
    int32 id = 1;
}

//类别字段信息返回
message CategoryBriefInfoResponse {
    int32 id = 1;
    string name = 2;
}

//类别筛选请求
message CategoryFilterRequest {
    int32 id = 1;
    bool  isTab = 2;
}

//商品id请求
message GoodInfoRequest {
    int32 id = 1;
}

//商品信息
message CreateGoodsInfo {
    int32 id = 1;
    string name = 2;
    string goodsSn = 3;
    int32 stocks = 7; //库存，
    float marketPrice = 8;
    float shopPrice = 9;
    string goodsBrief = 10;
    string goodsDesc = 11;
    bool shipFree = 12;
    repeated string images = 13;
    repeated string descImages = 14;
    string goodsFrontImage = 15;
    bool isNew = 16;
    bool isHot = 17;
    bool onSale = 18;
    int32 categoryId = 19;
    int32 brandId = 20;
}

//商品减量请求
message GoodsReduceRequest {
    int32 GoodsId = 1;
    int32 nums = 2;
}

//批量类别请求
message BatchCategoryInfoRequest {
    repeated int32 id = 1;
    int32 goodsNums = 2;
    int32 brandNums = 3;
}

//商品筛选请求
message GoodsFilterRequest  {
    int32 priceMin = 1;
    int32 priceMax = 2;
    bool  isHot = 3;
    bool  isNew = 4;
    bool  isTab = 5;
    int32 topCategory = 6;
    int32 pages = 7;
    int32 pagePerNums = 8;
    string keyWords = 9;
    int32 brand = 10;
}

//商品信息返回
message GoodsInfoResponse {
    int32 id = 1;
    int32 categoryId = 2;
    string name = 3;
    string goodsSn = 4;
    int32 clickNum = 5;
    int32 soldNum = 6;
    int32 favNum = 7;
    float marketPrice = 9;
    float shopPrice = 10;
    string goodsBrief = 11;
    string goodsDesc = 12;
    bool shipFree = 13;
    repeated string images = 14;
    repeated string descImages = 15;
    string goodsFrontImage = 16;
    bool isNew = 17;
    bool isHot = 18;
    bool onSale = 19;
    int64 addTime = 20;
    CategoryBriefInfoResponse category = 21;
    BrandInfoResponse brand = 22;
}

//商品列表返回
message GoodsListResponse {
    int32 total = 1;
    repeated GoodsInfoResponse data = 2;
}





